Grace/tests/gibbs/errors/t023.grace
// ERROR = P1023
catch {
    Exception.raise "1"
} case {
    e : Exception -> print "2"
} finally ({ print "3" }
